--- a/config.json
+++ b/config.json
@@ -1,23 +1,23 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
-"botName": "Hinata-Md",
-"packname": "Hinata-Md",
-"author": "© Riy04",
+"ownerNumber": ["6283168593226@s.whatsapp.net"],
+"ownerName": ["yunus"],
+"botName": "yunus-Md",
+"packname": "yunus-Md",
+"author": "© yunus",
 "sessionName": "session",
 "pathimg": "./media/hinata.jpg",
 
 "medsos": {
 "youtube": "https://youtube.com/c/Riy04",
-"instagram": "https://instagram.com/riychdwayne"
+"instagram": "https://instagram.com/yunussosmed?igshid=YmMyMTA2M2Y="
 },
 
 "donasi": {
 "saweria": "https://saweria.co/Riy20",
-"dana": "081575886399",
-"AN_dana": "Riy 04",
-"gopay": "081575886399",
-"AN_gopay": "Riy 04"
+"dana": "083168593226,
+"AN_dana": "Latipa",
+"gopay": "scan",
+"AN_gopay": "yunus"
 },
 
 "gamewaktu": 90,
